--- a/slides/01/css/main.css
+++ b/slides/01/css/main.css
@@ -34,6 +34,7 @@ li {
 }
 .big .selector {
     left: 205px;
+    text-align: center;
 }
 
 .small .selector {
@@ -114,4 +115,9 @@ li {
 
 .right:hover {
     background-color: rgba(0, 0, 0, 0.5)
+}
+
+.button {
+    position: relative;
+    top: 46%;
 }
